[package]
name = "cursovaia"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = [
    "dynamic_linking",
    "bevy_dev_tools",
    "bevy_text",
    "bevy_color",
] }
